<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@color/colormustanggreen"
              android:padding="10dp" >

  <TextView
      android:id="@+id/addGradePopup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/addGradePopup"
      android:textStyle="bold"
      android:textColor="@color/colormustanggold"
      android:textAllCaps="true"
      android:textAppearance="?android:attr/textAppearanceLarge" />

  <EditText
      android:id="@+id/gradeIdentifier"
      android:textColor="@color/colormustanggold"
      android:textColorHint="@color/colormustanggold"
      android:hint="@string/gradeIdentifier"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <EditText
      android:id="@+id/gradeRange"
      android:textColor="@color/colormustanggold"
      android:textColorHint="@color/colormustanggold"
      android:hint="@string/gradeRange"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <EditText
      android:id="@+id/gradeScore"
      android:textColor="@color/colormustanggold"
      android:textColorHint="@color/colormustanggold"
      android:hint="@string/gradeScore"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <EditText
      android:id="@+id/gradeWght"
      android:textColor="@color/colormustanggold"
      android:textColorHint="@color/colormustanggold"
      android:hint="@string/gradeWeightHint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

</LinearLayout>
