<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colormustanggreen"
    tools:context=".LoginSaveActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="67dp"
      android:text="@string/app_name"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="@color/colormustanggold"
      android:textSize="48sp" />

  <EditText
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/imageView"
      android:layout_marginTop="50dp"
      android:focusable="true"
      android:hint="@string/usernameHint"
      android:textColor="@color/colormustanggold"
      android:textColorHighlight="@color/colormustanggold"
      android:textColorHint="@color/colormustanggold"
      android:textSize="24sp" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_below="@+id/textView"
      android:layout_centerHorizontal="true"
      android:background="@mipmap/mustang_logo_foreground" />

  <EditText
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/username"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignRight="@+id/username"
      android:layout_below="@+id/username"
      android:ems="10"
      android:hint="@string/passHint"
      android:inputType="textPassword"
      android:textColor="@color/colormustanggold"
      android:textColorHint="@color/colormustanggold"
      android:textSize="24sp" />

  <Button
      android:id="@+id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:text="@string/confirmCred"
      android:textStyle="bold" />
</RelativeLayout>

